# dagpi-data

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  rust-check.yml
src/: error_handler.rs  main.rs
src/captchas/: routes.rs
src/data/: 8ball.txt  countries.json  facts.txt  jokes.json  logos.json  onion.json  pickuplines.json  pokemons.json  roasts.txt  typeracer.json
src/datasets/: constructor.rs  mod.rs  model.rs
src/eightball/: mod.rs  routes.rs
src/error/: mod.rs  model.rs  notfound.rs
src/facts/: routes.rs
src/flag/: mod.rs  routes.rs
src/handler/: mod.rs
src/headlines/: routes.rs
src/jokes/: routes.rs
src/logos/: routes.rs
src/middlewares/: auth.rs  mod.rs  models.rs
src/pickup/: routes.rs
src/roasts/: routes.rs
src/typeracer/: routes.rs
src/waifus/: mod.rs  routes.rs
src/wtp/: routes.rs
src/yomama/: routes.rs
