[package]
name = "data-api"
version = "0.1.0"
authors = ["Daggy1234 <arnav.jindal7@gmail.com>"]
edition = "2018"
description = "The data api part of the dagpi Network"
license = "AGPLv3"
readme = "README.md"

[profile.dev]
debug = true
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
dotenv = "0.15.0"
serde = "1.0"
difflib = "0.4.0"
sentry-actix = "0.21.0"
serde_json = "1.0"
rand = "0.8.2"
log = "0.4.11"
env_logger = "0.7.1"
tracing = "0.1.19"
futures = '0.3.5'
sentry = "0.21.0"
actix-service = "1.0.6"
color-eyre = "0.5.2"
reqwest = { version = "0.10.0", default-features = false, features = ["json", "rustls-tls"] }
actix-web-prom = "0.5.0"